--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mogo</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -79,7 +80,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/card-1.png" alt="">
+                    <img src="images/card-3.png" alt="">
                     <div class="effect">
                         <img src="images/user.png" alt="user">
                         <h5>super team</h5>
@@ -117,8 +118,424 @@
         </div>
     </section>
 
-    <!-- hero section goes here -->
-    <!-- hero section goes here -->
+    <!-- Services section goes here -->
+
+
+    <section class="services">
+        <div class="container">
+            <div class="section_title">
+                <h4>We work with</h4>
+                <h3>Amazing Services</h3>
+                <div class="u_line"></div>
+            </div>
+            <div class="all_card">
+                <div class="sm_card">
+                    <div class="icon">
+                        <i class="fa fa-clock-o" aria-hidden="true"></i>
+                    </div>
+                    <div class="des">
+                        <div class="title">
+                            <h5>Photography</h5>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="sm_card">
+                    <div class="icon">
+                        <i class="fa fa-line-chart" aria-hidden="true"></i>
+                    </div>
+                    <div class="des">
+                        <div class="title">
+                            <h5>Photography</h5>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="sm_card">
+                    <div class="icon">
+                        <i class="fa fa-desktop" aria-hidden="true"></i>
+                    </div>
+                    <div class="des">
+                        <div class="title">
+                            <h5>Photography</h5>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="sm_card">
+                    <div class="icon">
+                        <i class="fa fa-book" aria-hidden="true"></i>
+                    </div>
+                    <div class="des">
+                        <div class="title">
+                            <h5>Photography</h5>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="sm_card">
+                    <div class="icon">
+                        <i class="fa fa-home" aria-hidden="true"></i>
+                    </div>
+                    <div class="des">
+                        <div class="title">
+                            <h5>Photography</h5>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="sm_card">
+                    <div class="icon">
+                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                    </div>
+                    <div class="des">
+                        <div class="title">
+                            <h5>Photography</h5>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- review section goes here -->
+
+
+    <section class="review">
+        <div class="container">
+            <div class="all_slider">
+                <div class="slide">
+                    <div class="icon">
+                        <i class="fa fa-comments-o" aria-hidden="true"></i>
+                    </div>
+                    <div class="desc">
+                        <p>
+                            “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+                        </p>
+                    </div>
+                </div>
+                <div class="slider_button">
+                    <a><i class="fa fa-angle-left" aria-hidden="true"></i>
+                    </a>
+                    <a><i class="fa fa-angle-right" aria-hidden="true"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Team section goes here -->
+
+    <section class="team">
+        <div class="container">
+            <div class="section_title">
+                <h4>Who we are</h4>
+                <h3>Meet our team</h3>
+                <div class="u_line"></div>
+                <P>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </P>
+            </div>
+            <div class="all_members">
+                <div class="member">
+                    <div class="image">
+                        <img src="images/member-1.png" alt="team member image">
+                        <div class="effect">
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>
+                                    </a></li>
+                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>
+                                    </a></li>
+                                <li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                                    </a></li>
+                                <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>
+                                    </a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="desc">
+                        <h3>Matthew Dix</h3>
+                        <h5>Graphic Design</h5>
+                    </div>
+                </div>
+                <div class="member">
+                    <div class="image">
+                        <img src="images/member-2.png" alt="team member image">
+                        <div class="effect">
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>
+                                    </a></li>
+                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>
+                                    </a></li>
+                                <li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                                    </a></li>
+                                <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>
+                                    </a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="desc">
+                        <h3>Christopher Campbell</h3>
+                        <h5>Branding/UX design</h5>
+                    </div>
+                </div>
+                <div class="member">
+                    <div class="image">
+                        <img src="images/member-3.png" alt="team member image">
+                        <div class="effect">
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>
+                                    </a></li>
+                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>
+                                    </a></li>
+                                <li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                                    </a></li>
+                                <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>
+                                    </a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="desc">
+                        <h3>Michael Fertig </h3>
+                        <h5>Developer</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- work section goes here -->
+
+    <section class="simpleWork">
+        <div class="section_title">
+            <h4>What we do</h4>
+            <h3>some of our work</h3>
+            <div class="u_line"></div>
+            <P>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.
+            </P>
+        </div>
+        <div class="images">
+            <div class="fullSize">
+                <div class="sWimage">
+                    <img src="images/s-w-1.png" alt="work">
+                    <div class="effect">
+                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                        <h3>creatively designed</h3>
+                        <h4>Lorem ipsum dolor sit</h4>
+                    </div>
+                </div>
+                <div class="sWimage">
+                    <img src="images/s-w-2.png" alt="work">
+                    <div class="effect">
+                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                        <h3>creatively designed</h3>
+                        <h4>Lorem ipsum dolor sit</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="fullSize">
+                <div class="sWimage">
+                    <img src="images/s-w-3.png" alt="work">
+                    <div class="effect">
+                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                        <h3>creatively designed</h3>
+                        <h4>Lorem ipsum dolor sit</h4>
+                    </div>
+                </div>
+                <div class="sWimage">
+                    <img src="images/s-w-4.png" alt="work">
+                    <div class="effect">
+                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                        <h3>creatively designed</h3>
+                        <h4>Lorem ipsum dolor sit</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="fullSize">
+                <div class="sWimage">
+                    <img src="images/s-w-5.png" alt="work">
+                    <div class="effect">
+                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                        <h3>creatively designed</h3>
+                        <h4>Lorem ipsum dolor sit</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="fullSize">
+                <div class="sWimage">
+                    <img src="images/s-w-6.png" alt="work">
+                    <div class="effect">
+                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                        <h3>creatively designed</h3>
+                        <h4>Lorem ipsum dolor sit</h4>
+                    </div>
+                </div>
+                <div class="sWimage">
+                    <img src="images/s-w-7.png" alt="work">
+                    <div class="effect">
+                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                        <h3>creatively designed</h3>
+                        <h4>Lorem ipsum dolor sit</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer section goes here -->
+
+    <footer>
+        <div class="container footer">
+            <div class="col-1">
+                <div class="logo">
+                    <img src="images/fLogo.png" alt="logo">
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </p>
+                <a href="#"><span>15k</span> followers</a>
+                <div class="line"></div>
+                <div class="links">
+                    <h5>Follow Us:</h5>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-instagram" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-google-plus" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-dribbble" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-tumblr" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <form action="#">
+                    <input type="email" placeholder="Your Email...">
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+            <div class="col-2">
+                <div class="title">
+                    <h3>blogs</h3>
+                </div>
+                <div class="all_blogs">
+                    <div class="blog">
+                        <div class="b_image">
+                            <img src="images/b-img-1.png" alt="blog">
+                        </div>
+                        <div class="desc">
+                            <p>
+                                Lorem ipsum dolor sit amet,
+                                consectetur adipiscing
+                            </p>
+                            <span>Jan 9, 2016</span>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="b_image">
+                            <img src="images/b-img-2.png" alt="blog">
+                        </div>
+                        <div class="desc">
+                            <p>
+                                Lorem ipsum dolor sit amet,
+                                consectetur adipiscing
+                            </p>
+                            <span>Jan 9, 2016</span>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="b_image">
+                            <img src="images/b-img-3.png" alt="blog">
+                        </div>
+                        <div class="desc">
+                            <p>
+                                Lorem ipsum dolor sit amet,
+                                consectetur adipiscing
+                            </p>
+                            <span>Jan 9, 2016</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="title">
+                    <h3>blogs</h3>
+                </div>
+                <div class="insta_img">
+                    <img src="images/inst-1.png" alt="instagram image" >
+                    <img src="images/inst-2.png" alt="instagram image" >
+                    <img src="images/inst-3.png" alt="instagram image" >
+                    <img src="images/inst-4.png" alt="instagram image" >
+                    <img src="images/inst-5.png" alt="instagram image" >
+                    <img src="images/inst-6.png" alt="instagram image" >
+                    <img src="images/inst-7.png" alt="instagram image" >
+                    <img src="images/inst-8.png" alt="instagram image" >
+                    <img src="images/inst-9.png" alt="instagram image" >
+                </div>
+                <a href="#">View more photos</a>
+            </div>
+        </div>
+    </footer>
+
+    <!-- copy right section goes here -->
+    <section class="coyright">
+        <div class="container">
+            <div class="line"></div>
+            <div class="text">
+                <p>
+                    &copy; 2016 MoGo free PSD template by <span>Laaqiq</span>
+                </p>
+            </div>
+        </div>
+    </section>
 
 </body>
 
